--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ ul li {
   color: #ffffff;
   font-size: 17.6px;
   align-items: center;
-  text-align: center;
+  /* text-align: center; */
   padding: 16px;
 }
 .nav-item1 {
@@ -91,9 +91,10 @@ li {
   padding: 0.2em 0.3em;
   font-family: "DM Mono", monospace;
   border-radius: 2px;
+  transition: all 0.4s ease;
 }
 
-.nav-item3 li button:hover {
+.nav-item3 li:hover button{
   background-color: rgba(255, 0, 0, 0.73);
 }
 
@@ -149,7 +150,7 @@ li {
   background-image: url("/Assets/54141962354-ee6c0cea80-o.jpg");
   z-index: -2;
   position: absolute;
-  height: 120%;
+  height: 49rem;
   width: 100vw;
   top: 0;
   left: 0;
@@ -157,88 +158,157 @@ li {
   opacity: 0.9;
   max-width: 100%;
   object-fit: cover;
-  
 }
 
-.img-container::after{
-  content: '';
+.img-container::after {
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: -1;
-  height: 120vh;
-  background: linear-gradient(65.99deg,#000 0,transparent 99.04%);
+  height: 49rem;
+  background: linear-gradient(65.99deg, #000 0, transparent 95.04%);
 }
 
-.img-container{
+.img-container {
   padding: 48px 24px 24px 24px;
 }
 
-.main-topic1{
+.main-topic1 {
   height: 29.5rem;
   width: 40rem;
   /* background-color: red;   */
 }
 
-.main-topicHeading{
+.main-topicHeading {
   font-size: 4.5rem;
   line-height: 1.05em;
   margin-top: 3.6rem;
   margin-bottom: 0.5rem;
 }
 
-.main-topicPara{
+.main-topicPara {
   margin: 1rem 0rem;
   line-height: 1.65em;
   font-weight: 400;
   font-size: 1rem;
 }
 
-.main-topicFAQ{
-  background-color:#f64137;
+.main-topicFAQ {
+  background-color: #f64137;
   color: #fff;
   font-size: 1.38rem;
   line-height: 1rem;
   width: 14.6rem;
   height: 1.35rem;
-  padding: .75rem 1.25rem;
-  border-radius: .25rem;
+  padding: 0.75rem 1.25rem;
+  border-radius: 0.25rem;
   border: 1px solid transparent;
+  transition: all 0.4s ease;
+
 }
 
-.main-topicFAQ a{
+.main-topicFAQ a {
   text-decoration: none;
 }
 
-.main-topicFAQ:hover{
+.main-topicFAQ:hover {
   background-color: rgb(207, 0, 0);
   border: 1px solid #f64137;
 }
 
-.box{
+.box {
   width: 19.27rem;
   height: 5.9rem;
   /* background-color: red; */
-  border-top: 1px solid rgba(255, 255, 255, .2) !important;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
   margin-right: 1rem;
   padding-top: 1rem;
 }
 
-.current-stats{
+.current-stats {
   display: flex;
 }
 
-.box-subHeading{
+.box-subHeading {
   font-size: 0.7rem;
   font-weight: 500;
   letter-spacing: 3.5px;
   line-height: 1em;
   font-family: "dm-mono";
   margin: 0.7rem 0rem;
+  text-transform: uppercase;
 }
 
-.box-subPara{
+.box-subPara {
   padding-top: 0.75rem;
+  letter-spacing: 0.04rem;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  display: inline-flex;
 }
+
+/* this style is for para arrow */
+
+.arrow{
+  display: flex;
+  height: 20px;
+  width: 20px;
+  background-color: #f64137;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  margin-left: 0.5rem;
+  transition: all 0.4s ease;
+}
+.arrow:hover{
+  background-color: rgb(207, 0, 0);
+}
+
+p{
+  display: flex;
+}
+
+.material-symbols-outlined{
+  font-size: 1rem;
+}
+
+.box-subPara:hover .arrow {  
+  background-color: rgb(207, 0, 0);
+}
+
+
+/* for nav hidden content */
+
+.nav-item3-content{
+  display: flex;
+  flex-direction: column;
+}
+
+.hidden-Info{
+  position: absolute;
+  height: 503.766px;
+  width: 18rem;
+  background-color: #000;
+  padding: 1rem 0rem;
+  top: 71px;
+  right: 23.8%;
+}
+
+.no-border{
+  border: none;
+  width: 100%;
+  margin-right: 0px;
+  margin-top: 0px;
+  height: 4.2rem;
+  width: 14.25rem;
+  padding: 0.7rem 1.5rem;
+  margin-bottom: 0.5rem;
+  font-size: 1.375rem;
+}
+
