--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 /* this code is for navbar --> header */
 
-ul li {
+.navbar ul .padding-nav {
   list-style-type: none;
   padding: 16px;
   align-items: center;
@@ -35,6 +35,8 @@ ul li {
 
 .nav-item2 {
   flex-grow: 3;
+  display: flex;
+  justify-content: center;
 }
 
 .nav-item3 {
@@ -60,14 +62,13 @@ li {
   background-color: black;
   width: 180px;
   height: 28px;
-  border: 1px solid #444447;
+  border: 1px solid #444447 !important;
   font-weight: 300;
   color: white;
-  /* border: 5px solid #007cba; */
 }
 
 .nav-item2 img {
-  height: 55px;
+  height: 52px;
 }
 
 .abc {
@@ -92,6 +93,11 @@ li {
   font-family: "DM Mono", monospace;
   border-radius: 2px;
   transition: all 0.4s ease;
+}
+
+.navbar ul{
+  cursor: pointer;
+
 }
 
 .nav-item3 li:hover button{
@@ -296,9 +302,16 @@ p{
   width: 18rem;
   background-color: #000;
   padding: 1rem 0rem;
-  top: 71px;
+  top: -710px;
   right: 23.8%;
+  z-index: -21;
+  
 }
+.hide{
+  z-index: 100;
+  top: 71px;
+}
+
 
 .no-border{
   border: none;
@@ -312,3 +325,50 @@ p{
   font-size: 1.375rem;
 }
 
+.no-border ul {
+  display: flex;
+  flex-direction: column;
+  padding: .5rem 1.5rem !important;
+
+  display: block;
+  width: 100%;
+  font-size: 1rem;
+  font-weight: 400;
+  display: inline;
+}
+
+.trans{
+  transform: rotate(45deg);
+  margin-left: 1.2rem;
+  height: 25px;
+  width: 25px;
+}
+
+.hdn-items{
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.hdn-items li{
+  padding: .5rem 1.5rem;
+  border-bottom: 1px solid transparent;
+  color: #fff;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.hdn-items li:hover{
+  text-decoration: dotted underline;
+}
+
+.hidden-Info2{
+  right: 12.4%;
+  height: 470.766px;
+
+}
+
+
+.blueBorder {
+  border: 5px solid #007cba !important;
+}
